[package]
name = "hush-app"
version = "1.0.0"
description = "Hush — One-click notification silencer"
authors = ["Srikanth Pullela"]
edition = "2021"

[lib]
name = "hush_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55"

